# web-scraper-wasm

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: lib.rs  utils.rs
src/oauth/: github_oauth.rs  mod.rs
src/pages/: pages.rs
src/routes/: routes.rs  utils.rs
src/scraper/: scraper.rs
