[package]
name = "web-scraper"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
reqwest = "0.11.24"
scraper = "0.18.1"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
oauth2 = "4.4.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
